fix mobile nav overflow

--- a/src/Component/Navbar/Navbar.scss
+++ b/src/Component/Navbar/Navbar.scss
@@ -6,8 +6,7 @@
     max-width: 1440px;
     margin: 0 auto;
     padding: 10px 20px;
-    position: relative;
-   
+    overflow: hidden;
     
     .logo{
         font-size: 3rem;
@@ -51,6 +50,8 @@
 .mobile-nav-toggle{
 
     width: 30px;
+    cursor: pointer;
+    height: 30px;
     @media (min-width:900px){
         display: none;
     }
@@ -59,25 +60,26 @@
 
 .mobile-navbar{
     position: absolute;
-    height: 400px;
+    display: block;
+    height: 300px;
     width: 100%;
-    top: 65px;
-    right: 0;
-    
+    top: 75px;
+    left: 0;
     text-align: left;
-    font-size: 1.3rem;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
-    background-color: beige;
+    font-size: 1.1rem;  
+    background-color: rgba(241, 241, 241, 0.859);
+    transition: all 1s ease-out;
+    text-transform: uppercase;
+    box-shadow: inset 0px 12px 8px -4px rgba(61,61,61,0.74);
     
- 
-
+     
     ul{
-        z-index: 111;
         flex-direction: column;
         justify-content: space-around;
         height: inherit;
-
+        padding-left: 20px;
+            
+        
     }
 
     @media (min-width:900px){
@@ -85,6 +87,4 @@
     }
 }
 
-.nav-active{
-    transform: translateX(0);
-}
+
